cmake_minimum_required(VERSION 4.0)
project(cpp_project)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp_project main.cpp
        task7.cpp
        taks9.cpp
        task10.cpp
        task14.cpp
        task15.cpp
        task35.cpp
        task.cpp
        task0.cpp
        task16.cpp
        task18.cpp
        taks20.cpp
        task22.cpp
        task23.cpp
        task42.cpp
        task43.cpp
        structs.cpp
        betterstruct.cpp
        conversion.cpp
        strings.cpp
        functions.cpp
        midtask.cpp
        task4.cpp
        task11.cpp
        task33.cpp
        task45.cpp
        forloops.cpp
        task30.cpp
        task32.cpp
        nestedloops.cpp
        whileloop.cpp
        task26.cpp
)
